--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Forum
-    url: https://github.community/
+  - name: Zuniswap Community discord
+    url: 
     about: Ask questions and discuss the roadmap here.
-  - name: GitHub Support - Feedback
-    url: https://support.github.com/contact/feedback
+  - name: Zuniswap - Feedback
+    url: 
     about: Share your feedback with the GitHub team.
